--- a/snapshot/jacoco/com.github.jonasrutishauser.maven.plugin.bpmn/ReportConfiguration.java.html
+++ b/snapshot/jacoco/com.github.jonasrutishauser.maven.plugin.bpmn/ReportConfiguration.java.html
@@ -1,58 +1,89 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../jacoco-resources/report.css" type="text/css"/><link rel="shortcut icon" href="../jacoco-resources/report.gif" type="image/gif"/><title>ReportConfiguration.java</title><link rel="stylesheet" href="../jacoco-resources/prettify.css" type="text/css"/><script type="text/javascript" src="../jacoco-resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=4;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../jacoco-sessions.html" class="el_session">Sessions</a></span><a href="../index.html" class="el_report">BPMN Maven Plugin</a> &gt; <a href="index.source.html" class="el_package">com.github.jonasrutishauser.maven.plugin.bpmn</a> &gt; <span class="el_source">ReportConfiguration.java</span></div><h1>ReportConfiguration.java</h1><pre class="source lang-java linenums">package com.github.jonasrutishauser.maven.plugin.bpmn;
 
+/*
+ * Copyright (C) 2017 Jonas Rutishauser
+ * 
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation version 3 of the License.
+ * 
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ * 
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with this program.
+ * If not, see &lt;http://www.gnu.org/licenses/lgpl-3.0.txt&gt;.
+ */
+
 import java.io.File;
 import java.util.List;
 import java.util.stream.Stream;
 
-public class ReportConfiguration {
+public class ReportConfiguration
+{
 
-	private final File basedir;
-	private final List&lt;File&gt; bpmns;
-	private final List&lt;File&gt; dmns;
-	private final List&lt;File&gt; cmmns;
+    private final File basedir;
 
-<span class="fc" id="L14">	public ReportConfiguration(File basedir, List&lt;File&gt; bpmns, List&lt;File&gt; dmns, List&lt;File&gt; cmmns) {</span>
-<span class="fc" id="L15">		this.basedir = basedir;</span>
-<span class="fc" id="L16">		this.bpmns = bpmns;</span>
-<span class="fc" id="L17">		this.dmns = dmns;</span>
-<span class="fc" id="L18">		this.cmmns = cmmns;</span>
-<span class="fc" id="L19">	}</span>
+    private final List&lt;File&gt; bpmns;
 
-	public boolean canGenerateReport() {
-<span class="fc bfc" id="L22" title="All 6 branches covered.">		return hasBpmn() || hasDmn() || hasCmmn();</span>
-	}
+    private final List&lt;File&gt; dmns;
 
-	public boolean hasBpmn() {
-<span class="fc bfc" id="L26" title="All 2 branches covered.">		return !bpmns.isEmpty();</span>
-	}
+    private final List&lt;File&gt; cmmns;
 
-	public boolean hasDmn() {
-<span class="fc bfc" id="L30" title="All 2 branches covered.">		return !dmns.isEmpty();</span>
-	}
+    public ReportConfiguration( File basedir, List&lt;File&gt; bpmns, List&lt;File&gt; dmns, List&lt;File&gt; cmmns )
+<span class="fc" id="L36">    {</span>
+<span class="fc" id="L37">        this.basedir = basedir;</span>
+<span class="fc" id="L38">        this.bpmns = bpmns;</span>
+<span class="fc" id="L39">        this.dmns = dmns;</span>
+<span class="fc" id="L40">        this.cmmns = cmmns;</span>
+<span class="fc" id="L41">    }</span>
 
-	public boolean hasCmmn() {
-<span class="fc bfc" id="L34" title="All 2 branches covered.">		return !cmmns.isEmpty();</span>
-	}
+    public boolean canGenerateReport()
+    {
+<span class="fc bfc" id="L45" title="All 6 branches covered.">        return hasBpmn() || hasDmn() || hasCmmn();</span>
+    }
 
-	public File getBasedir() {
-<span class="fc" id="L38">		return basedir;</span>
-	}
+    public boolean hasBpmn()
+    {
+<span class="fc bfc" id="L50" title="All 2 branches covered.">        return !bpmns.isEmpty();</span>
+    }
 
-	public List&lt;File&gt; getBpmns() {
-<span class="fc" id="L42">		return bpmns;</span>
-	}
+    public boolean hasDmn()
+    {
+<span class="fc bfc" id="L55" title="All 2 branches covered.">        return !dmns.isEmpty();</span>
+    }
 
-	public List&lt;File&gt; getDmns() {
-<span class="fc" id="L46">		return dmns;</span>
-	}
+    public boolean hasCmmn()
+    {
+<span class="fc bfc" id="L60" title="All 2 branches covered.">        return !cmmns.isEmpty();</span>
+    }
 
-	public List&lt;File&gt; getCmmns() {
-<span class="fc" id="L50">		return cmmns;</span>
-	}
+    public File getBasedir()
+    {
+<span class="fc" id="L65">        return basedir;</span>
+    }
 
-	public Stream&lt;File&gt; getModels() {
-<span class="fc" id="L54">		return Stream.concat(bpmns.stream(), Stream.concat(dmns.stream(), cmmns.stream()));</span>
-	}
+    public List&lt;File&gt; getBpmns()
+    {
+<span class="fc" id="L70">        return bpmns;</span>
+    }
+
+    public List&lt;File&gt; getDmns()
+    {
+<span class="fc" id="L75">        return dmns;</span>
+    }
+
+    public List&lt;File&gt; getCmmns()
+    {
+<span class="fc" id="L80">        return cmmns;</span>
+    }
+
+    public Stream&lt;File&gt; getModels()
+    {
+<span class="fc" id="L85">        return Stream.concat( bpmns.stream(), Stream.concat( dmns.stream(), cmmns.stream() ) );</span>
+    }
 
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.7.9.201702052155</span></div></body></html>
